--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple single player battleship",
   "main": "TextModeGame.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive -R spec ./unitTests/",
+    "test-board": "mocha -R spec ./unitTests/board-test.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,10 @@
   "homepage": "https://github.com/gustavo7lagoas/simpleBattleship",
   "dependencies": {
     "lodash": "^3.6.0"
+  },
+  "devDependencies": {
+    "chai": "^2.3.0",
+    "mocha": "^2.2.4",
+    "sinon": "^1.14.1"
   }
 }
