--- a/package.json
+++ b/package.json
@@ -3,8 +3,18 @@
   "version": "0.0.1",
   "description": "A simple single player battleship",
   "main": "TextModeGame.js",
+  "config" : {
+    "blanket" : {
+        "pattern" : "",
+        "data-cover-never" : [
+            "node_modules",
+            "test"
+        ]
+    }
+  },
   "scripts": {
     "test": "mocha --recursive -R spec ./unitTests/",
+    "test-coverage": "mocha --require blanket --recursive ./unitTests/ -R html-cov > coverage.html",
     "test-board": "mocha -R spec ./unitTests/board-test.js",
     "build-js": "browserify WebModeGame.js --standalone WebGame -o bundle.js"
   },
@@ -29,6 +39,7 @@
     "lodash": "^3.6.0"
   },
   "devDependencies": {
+    "blanket": "^1.1.7",
     "chai": "^2.3.0",
     "mocha": "^2.2.4",
     "sinon": "^1.14.1"
